WICKET-7135 Work on deprecation warnings (#1049)
* Migrate new Locale constructor invocations to Locale.of calls

* Migrate new URL constructor invocations to URI#toURL

* Migrate deprecated API calls to their replacements