@@ -19,6 +19,7 @@ package org.apache.wicket.core.util.file;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 
+import java.net.URI;
 import java.net.URL;
 import jakarta.servlet.ServletContext;
 
@@ -35,7 +36,7 @@ class WebApplicationPathTest
 	@Test
 	void doNotServeResourcesFromWebInf() throws Exception
 	{
-		URL webUrl = new URL("file://dummyFile");
+		URL webUrl = URI.create("file://dummyFile").toURL();
 
 		ServletContext context = Mockito.mock(ServletContext.class);
 		Mockito.when(context.getResource(ArgumentMatchers.any(String.class))).thenReturn(webUrl);
